--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,40 @@
   <groupId>com.wishhust</groupId>
   <artifactId>learn-java</artifactId>
   <version>1.0.0</version>
+  <properties>
+    <java.version>1.8</java.version>
+  </properties>
 
+  <dependencies>
+    <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+
+    <!-- json 数据序列化 -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.49</version>
+    </dependency>
+
+  </dependencies>
+
+  <build>
+  <plugins>
+  <!-- Compile -->
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.3</version>
+    <configuration>
+      <source>1.8</source>
+      <target>1.8</target>
+    </configuration>
+  </plugin>
+  </plugins>
+  </build>
 
 </project>
